oops, ofcos this has to be a PWA | added prod vars

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,10 +35,10 @@
                       >
                     </div>
                     <div
-                      *ngIf="loaded"
+                      *ngIf="movieModel"
                       style="background-color: azure; padding: 10px"
                     >
-                      <h6>Movie details</h6>
+                      <h4 class="text-center">Movie details</h4>
                       <hr />
                       <ul
                         style="list-style-type: none; color: rgb(179, 54, 54)"
