update ngIf flags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
                       >
                     </div>
                     <div
-                      *ngIf="movieModel"
+                      *ngIf="movieModel && loaded"
                       style="background-color: azure; padding: 10px"
                     >
                       <h4 class="text-center">Movie details</h4>
