--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,6 +75,7 @@
                     <hr />
                     <div *ngIf="loading && loaded == false" class="text-center">
                       <img
+                        style="border-radius: 50%"
                         height="100"
                         width="100"
                         alt="Loading"
